test/error/E37.chigfn
{
	"type": "function",
	"name": "helloworld",
	"inputs": [],
	"outputs": [],
	"nodes": {
		"if": {
			"type": "lang:ieeef",
			"data": {},
			"location": [2, 2]
		}
	},
	"connections": [
	]
}
